Fixed a bug in gateone.js where GateOne.Utils.loadPrefs() would override global defaults if the user's saved preferences included null values (meaning they didn't intend to override anything).  This bug was mentioned in https://github.com/liftoff/GateOne/issues/69 Made it so that the scrollback buffer is pre-filled with empty strings to the size specified in GateOne.prefs.scrollback when a new terminal is created.  This ensures that the terminal stays at the bottom of the window when the scrollback buffer gets re-enabled after screen updates (only important for terminals where the number of rows is less than what's actually available in the window). Fixed the bug reported in https://github.com/liftoff/GateOne/issues/71 where the focus would go back to the terminal after clicking an input element (in the settings panel).  The focus should now stay on all input, button, textarea, and select elements. Tweaked the CSS so that it is easier to visually discern when buttons are selected (have focus) and submitted via the keyboard. Changed the set_G0_charset() and set_G1_charset() functions in terminal.py to use try/except blocks after a suggestion in #python on freenode (probably doesn't make any difference). Fixed an issue where (JavaScript) exceptions were encountered when closing a terminal. Changed the resize() function in gateone.py so that it now can work with individual terminals (client side still needs changes for this to work though). Changed the resize() function in termio.py so that it first applies an incorrect terminal rows/cols setting and then applies the correct one.  This seems to be an effective workaround for the situation where terminals get "stuck" at 24x80.  What's odd about this problem is that no matter how many times you call resize on one of these "stuck" terminals nothing happens unless you apply a *different* rows/cols size than the last one you sent (which apparently failed).

--- a/gateone/templates/themes/dark-black.css
+++ b/gateone/templates/themes/dark-black.css
@@ -762,6 +762,7 @@
 #{{container}} .button:active {
     position: relative;
     top: 1px;
+    border: solid 0.1em #FFF;
 }
 /* black buttons */
 #{{container}} .black {
@@ -786,6 +787,13 @@
     background: -moz-linear-gradient(top,  #000,  #444);
     background: -o-linear-gradient(top,  #000,  #444);
     filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#222222');
+}
+#{{container}} .black:focus {
+    color: #FFF;
+    background: -webkit-gradient(linear, left top, left bottom, from(#000), to(#444));
+    background: -moz-linear-gradient(top,  #000,  #444);
+    background: -o-linear-gradient(top,  #000,  #444);
+    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#666666');
 }
 /* SVG Styling */
 .svgtext { letter-spacing:0px; text-anchor:middle; word-spacing:0px; text-align:center; color: #FFF; fill: #fff; }
